[project]
name = "agent"
version = "0.0.1"
description = "Starter template for making a new agent LangGraph."
authors = [
    { name = "Dair Diaz", email = "dairdiazr@gmail.com" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "arxiv==2.2.0",
    "langchain==0.3.27",
    "langchain-community==0.3.27",
    "langchain-google-genai==2.1.8",
    "langchain-ollama==0.3.6",
    "langgraph==0.5.4",
    "python-dotenv==1.1.1",
]


[project.optional-dependencies]
dev = ["mypy==1.17.0", "ruff==0.12.5"]

[build-system]
requires = ["setuptools==80.9.0", "wheel==0.45.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["langgraph.templates.agent", "agent"]
[tool.setuptools.package-dir]
"langgraph.templates.agent" = "src/agent"
"agent" = "src/agent"


[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "E501",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
    "anyio==4.9.0",
    "langgraph-cli[inmem]==0.3.6",
    "mypy==1.17.0",
    "pytest==8.4.1",
    "ruff==0.12.5",
]
